Ajustes nas configurações

--- a/Genius/nbproject/project.properties
+++ b/Genius/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=genius.Genius
+main.class=br.ufs.decomp.genius.Genius
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
